--- a/video-site-with-express-example/views/add_post.ejs
+++ b/video-site-with-express-example/views/add_post.ejs
@@ -5,35 +5,28 @@
         <div class="row mt-3 mb-5 pb-3">
             <div class="col-12">
                 <div class="mx-auto tm-about-text-container px-3">
-                    <h2 class="tm-page-title mb-4 tm-text-primary">Add Video</h2>
+                    <h2 class="tm-page-title mb-4 tm-text-primary">Add New Photo</h2>
                 </div>
             </div>
         </div>
         <div class="mx-auto pb-3 tm-about-text-container px-3">
             <div class="row">
                 <div class="col-lg-12 mb-5">
-                    <form id="contact-form" action="" method="POST" class="tm-contact-form">
+                    <form action="/store-post" method="POST" class="tm-contact-form">
                         <div class="form-group">
-                            <input type="text" name="name" class="form-control rounded-0" placeholder="Name" required="" />
+                            <input type="text" name="title" class="form-control rounded-0" placeholder="Title"/>
                         </div>
                         <div class="form-group">
-                            <input type="email" name="email" class="form-control rounded-0" placeholder="Email" required="" />
+                            <input type="text" name="description" class="form-control rounded-0"
+                                   placeholder="Description"/>
                         </div>
                         <div class="form-group">
-                            <select class="form-control" id="contact-select" name="inquiry">
-                                <option value="-">Subject</option>
-                                <option value="sales">Sales &amp; Marketing</option>
-                                <option value="creative">Creative Design</option>
-                                <option value="uiux">UI / UX</option>
-                            </select>
+                            <input type="file" name="photo">
                         </div>
-                        <div class="form-group">
-                                    <textarea rows="8" name="message" class="form-control rounded-0" placeholder="Message"
-                                              required=""></textarea>
-                        </div>
-
                         <div class="form-group mb-0">
-                            <button type="submit" class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"><span>Submit</span></button>
+                            <button type="submit"
+                                    class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit">
+                                <span>Submit</span></button>
                         </div>
                     </form>
                 </div>
@@ -52,33 +45,41 @@
         <div class="row">
             <div class="col-lg-6 mb-5 pt-3">
                 <div class="media tm-testimonial">
-                    <img class="mr-4 rounded-circle img-fluid" src="../public/img/testimonial-1.jpg" alt="Generic placeholder image">
+                    <img class="mr-4 rounded-circle img-fluid" src="../public/img/testimonial-1.jpg"
+                         alt="Generic placeholder image">
                     <p class="media-body pt-3 tm-testimonial-text">
-                        Vestibulum non lectus id lacus aliquet porttitor in non nulla. Aenean urna diam, finibys id lorem nec, feugiat convallis dolor. Integer aliquam, eros eget rutrum iaculis.
+                        Vestibulum non lectus id lacus aliquet porttitor in non nulla. Aenean urna diam, finibys id
+                        lorem nec, feugiat convallis dolor. Integer aliquam, eros eget rutrum iaculis.
                     </p>
                 </div>
             </div>
             <div class="col-lg-6 mb-5 pt-3">
                 <div class="media tm-testimonial">
-                    <img class="mr-4 rounded-circle img-fluid" src="../public/img/testimonial-2.jpg" alt="Generic placeholder image">
+                    <img class="mr-4 rounded-circle img-fluid" src="../public/img/testimonial-2.jpg"
+                         alt="Generic placeholder image">
                     <p class="media-body pt-3 tm-testimonial-text">
-                        Maecenas et libero in eros laoreet finibus sed vitae diam. Etiam consetetur, nunc sed pretium elementum, diam erat fringilla tortor, placerat condimentum.
+                        Maecenas et libero in eros laoreet finibus sed vitae diam. Etiam consetetur, nunc sed pretium
+                        elementum, diam erat fringilla tortor, placerat condimentum.
                     </p>
                 </div>
             </div>
             <div class="col-lg-6 mb-5 pt-3">
                 <div class="media tm-testimonial">
-                    <img class="mr-4 rounded-circle img-fluid" src="../public/img/testimonial-3.png" alt="Generic placeholder image">
+                    <img class="mr-4 rounded-circle img-fluid" src="../public/img/testimonial-3.png"
+                         alt="Generic placeholder image">
                     <p class="media-body pt-3 tm-testimonial-text">
-                        Aliquam tristique ut magna sit amet tincidunt. Sed tempor tellus nulla, molestie luctus lectus tincidunt id. Cras duismod leo a urna placerat, vel blandit turpis fermentum.
+                        Aliquam tristique ut magna sit amet tincidunt. Sed tempor tellus nulla, molestie luctus lectus
+                        tincidunt id. Cras duismod leo a urna placerat, vel blandit turpis fermentum.
                     </p>
                 </div>
             </div>
             <div class="col-lg-6 mb-5 pt-3">
                 <div class="media tm-testimonial">
-                    <img class="mr-4 rounded-circle img-fluid" src="../public/img/testimonial-4.png" alt="Generic placeholder image">
+                    <img class="mr-4 rounded-circle img-fluid" src="../public/img/testimonial-4.png"
+                         alt="Generic placeholder image">
                     <p class="media-body pt-3 tm-testimonial-text">
-                        Nulla suscipit posuere lectus ut venenatis. Proin sed orci eget tellus euismod vulputate eu eu arcu. Etiam a bibendum lorem. Cura
+                        Nulla suscipit posuere lectus ut venenatis. Proin sed orci eget tellus euismod vulputate eu eu
+                        arcu. Etiam a bibendum lorem. Cura
                     </p>
                 </div>
             </div>
