--- a/video-site-with-express-example/views/partials/_navigation.ejs
+++ b/video-site-with-express-example/views/partials/_navigation.ejs
@@ -29,7 +29,7 @@
                                     <a class="nav-link tm-nav-link" href="/about">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="/add_post">Add Post</a>
+                                    <a class="nav-link tm-nav-link" href="/add-post">Add Post</a>
                                 </li>
                             </ul>
                         </div>
