--- a/video-site-with-express-example/public/css/templatemo-video-catalog.css
+++ b/video-site-with-express-example/public/css/templatemo-video-catalog.css
@@ -1,11 +1,3 @@
-/*
-
-TemplateMo 552 Video Catalog
-
-https://templatemo.com/tm-552-video-catalog
-
-*/
-
 html { scroll-behavior: smooth; overflow-x: hidden; }
 
 body {
@@ -206,7 +198,6 @@ h2, p { color: #666666; }
 }
 
 .tm-page-title { font-size: 2.5rem; }
-.tm-catalog-item-list { justify-content: space-between; }
 
 .tm-catalog-item {
     max-width: 462px;
@@ -229,7 +220,7 @@ h2, p { color: #666666; }
     justify-content: center;
     background-color: rgba(0,0,0,0.4);
     cursor: pointer;
-    transition: all 0.3s ease: ;
+    transition: all 0.3s ease;
 }
 
 .tm-overlay-icon {
