--- a/video-site-with-express-example/views/add_post.ejs
+++ b/video-site-with-express-example/views/add_post.ejs
@@ -12,7 +12,7 @@
         <div class="mx-auto pb-3 tm-about-text-container px-3">
             <div class="row">
                 <div class="col-lg-12 mb-5">
-                    <form action="/store-post" method="POST" class="tm-contact-form">
+                    <form action="/store-post" method="POST" class="tm-contact-form" enctype="multipart/form-data">
                         <div class="form-group">
                             <input type="text" name="title" class="form-control rounded-0" placeholder="Title"/>
                         </div>
