--- a/video-site-with-express-example/views/video-page.ejs
+++ b/video-site-with-express-example/views/video-page.ejs
@@ -6,11 +6,7 @@
 				<main>
 					<div class="row mb-5 pb-4">
 						<div class="col-12">
-							<!-- Video player 1422x800 -->
-							<video width="1422" height="800" controls autoplay>
-							  <source src="../public/video/wheat-field.mp4" type="video/mp4">
-							Your browser does not support the video tag.
-							</video>
+							<img src="<%= photo.image %>" alt="image" class="w-100">
 						</div>
 					</div>
 					<div class="row mb-5 pb-5">
